Added basic UI controls

--- a/WPFApplications/WPFSampleApplication/MainWindow.xaml
+++ b/WPFApplications/WPFSampleApplication/MainWindow.xaml
@@ -5,8 +5,130 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPFSampleApplication"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+        Title="WPF Basics" Height="750" Width="400">
+
+    <Border Padding="10">
+        <StackPanel>
+            <!-- Buttons -->
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <Button Margin ="0 0 10 0"  Grid.Column="0" Content="Apply" x:Name ="ApplyButton" Click="ApplyButton_Click"></Button>
+                <Button Grid.Column="1" Content="Reset" x:Name="ResetButton" Click="ResetButton_OnClick"></Button>
+                <Button Margin ="10 0 0 0"  Grid.Column="2" Content="Refresh" ></Button>
+            </Grid>
+
+            <!-- Pulse Description -->
+            <TextBlock Text="Pulse Properties" FontWeight="Bold" Margin="0 10"/>
+            
+            <!-- Description -->
+            <TextBlock Text="Description"/>
+            <TextBox x:Name ="DescriptionText" Padding="2"/>
+
+
+            <!-- Status and Revision -->
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <StackPanel Grid.Column="0" Margin="0 0 10 0">
+                    <TextBlock Text="Status"/>
+                    <TextBox IsReadOnly ="True" Background="#eee" Padding="2"/>
+                </StackPanel>
+
+                <StackPanel Grid.Column="1">
+                    <TextBlock Text="Revision"/>
+                    <TextBox IsReadOnly="True" Background="#eee" Padding="2"/>
+                </StackPanel>
+            </Grid>
+
+            <!-- Part Number -->
+            <TextBlock Text="Part Number"/>
+            <TextBox IsReadOnly="True" Background="#eee" Padding="2"/>
+
+            <!-- RAW Material -->
+            <TextBlock Text="RAW Material" FontWeight="Bold" Margin="0 10"/>
+
+            <!-- Material -->
+            <TextBlock Text="Material"/>
+            <ComboBox Padding="2"/>
+
+            <!-- Manufacturing Information -->
+            <TextBlock Text="Manufacturing Information" FontWeight="Bold" Margin="0 10"/>
+            
+            <!-- Work Centers -->
+            <TextBlock Text="Work Centers" Margin="0 0 0 10"/>
+
+            <!-- CheckBoxes -->
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <StackPanel Grid.Column="0" Margin="0 0 10 0">
+                    <CheckBox x:Name="WeldCheckBox" Checked="CheckBox_OnChecked" Content="Weld"/>
+                    <CheckBox x:Name="AssemblyCheckBox" Checked="CheckBox_OnChecked" Content="Assembly"/>
+                    <!--<CheckBox x:Name="PlasmaCheckBox" Checked="CheckBox_OnChecked" Content="Plasma"/>
+                    <CheckBox x:Name="LaserCheckBox" Checked="CheckBox_OnChecked" Content="Laser"/>
+                    <CheckBox x:Name="PurchaseCheckBox" Checked="CheckBox_OnChecked" Content="Purchase"/>-->
+                </StackPanel>
+
+                <StackPanel Grid.Column="1">
+                    <CheckBox x:Name="LatheCheckBox" Checked="CheckBox_OnChecked" Content="Lathe"/>
+                    <CheckBox x:Name="DrillCheckBox" Checked="CheckBox_OnChecked" Content="Drill"/>
+                    <!--<CheckBox x:Name="FoldCheckBox" Checked="CheckBox_OnChecked" Content="Fold"/>
+                    <CheckBox x:Name="RollCheckBox" Checked="CheckBox_OnChecked" Content="Roll"/>
+                    <CheckBox x:Name="SawCheckBox" Checked="CheckBox_OnChecked" Content="Saw"/>-->
+                </StackPanel>
+            </Grid>
+
+            <!-- Length -->
+            <TextBlock Text="Length"/>
+            <TextBox x:Name="LengthText"  Padding="2"/>
+
+            <!-- Mass -->
+            <TextBlock Text="Mass"/>
+            <TextBox IsReadOnly="True" Background="#eee" Padding="2"/>
+
+            <!-- Finish -->
+            <TextBlock Text="Finish"/>
+            <ComboBox SelectedIndex ="0" Padding="2" SelectionChanged="FinishDropDown_SelectionChanged">
+                <ComboBoxItem>Painted</ComboBoxItem>
+                <ComboBoxItem>Not Painted</ComboBoxItem>
+            </ComboBox>
+
+            <!-- Purchase Info -->
+            <TextBlock Text="Purchase Information"/>
+            <ComboBox SelectedIndex ="0" Padding="2">
+                <ComboBoxItem>Rubber</ComboBoxItem>
+                <ComboBoxItem>Not Rubber</ComboBoxItem>
+            </ComboBox>
+
+            <!-- Supplier Name -->
+            <TextBlock Text="Supplier Name"/>
+            <TextBox Padding="2"/>
+
+            <!-- Supplier Code -->
+            <TextBlock Text="Supplier Code"/>
+            <TextBox Padding="2"/>
+
+            <!-- Addition Information -->
+            <TextBlock Text="Addition Information" FontWeight="Bold" Margin="0 10"/>
+
+            <!-- Note -->
+            <TextBlock Text="Note"/>
+            <TextBox x:Name="NoteText" Padding="2"/>
+
+
+        </StackPanel>
+    </Border>
+   
+
 </Window>
