Added main window loaded logic and supplier name text changed

--- a/WPFApplications/WPFSampleApplication/MainWindow.xaml
+++ b/WPFApplications/WPFSampleApplication/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPFSampleApplication"
         mc:Ignorable="d"
+        Loaded="MainWindow_OnLoaded"
         Title="WPF Basics" Height="750" Width="400">
 
     <Border Padding="10">
@@ -95,11 +96,11 @@
 
             <!-- Mass -->
             <TextBlock Text="Mass"/>
-            <TextBox IsReadOnly="True" Background="#eee" Padding="2"/>
+            <TextBox x:Name="MassText" IsReadOnly="True" Background="#eee" Padding="2"/>
 
             <!-- Finish -->
             <TextBlock Text="Finish"/>
-            <ComboBox SelectedIndex ="0" Padding="2" SelectionChanged="FinishDropDown_SelectionChanged">
+            <ComboBox SelectedIndex ="0" Padding="2" x:Name="FinshDropdown" SelectionChanged="FinishDropDown_SelectionChanged">
                 <ComboBoxItem>Painted</ComboBoxItem>
                 <ComboBoxItem>Not Painted</ComboBoxItem>
             </ComboBox>
@@ -113,7 +114,7 @@
 
             <!-- Supplier Name -->
             <TextBlock Text="Supplier Name"/>
-            <TextBox Padding="2"/>
+            <TextBox x:Name="SupplierNameText" TextChanged="SupplierNameText_OnTextChanged" Padding="2"/>
 
             <!-- Supplier Code -->
             <TextBlock Text="Supplier Code"/>
